<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cpp_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Client server intserfaces creation</description>
  <maintainer email="amruth.kedarisetti@pravaig.com">root</maintainer>
  <license>BSD‑1‑Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>example_interfaces</buildtool_depend>
  <buildtool_depend>my_robot_interfaces</buildtool_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>cpp_parameters</build_type>

  </export>
</package>
